--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
-\documentclass[12pt,oneside, draft]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
-
+% \documentclass[12pt,oneside, draft]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
+\documentclass[12pt, oneside, final]{book}
 \usepackage{uorthesis}  % Loads the LaTeX style package
 \usepackage[backend=biber, style=authoryear]{biblatex}
 % \usepackage[sort=none, backend=biber, style=authoryear]{biblatex}
