--- a/references.bib
+++ b/references.bib
@@ -109,157 +109,332 @@
   journaltitle = {TikZ.net},
   title        = {Neural networks},
 }
-   
-@article{Naskath2022,
-	abstract = {Deep learning is a wildly popular topic in machine learning and is structured as a series of nonlinear layers that learns various levels of data representations. Deep learning employs numerous layers to represent data abstractions to implement various computer models. Deep learning approaches like generative, discriminative models and model transfer have transformed information processing. This article proposes a comprehensive review of various deep learning algorithms Multi layer perception, Self-organizing map and deep belief networks algorithms. It first briefly introduces historical and recent state-of-the-art reviews with suitable architectures and implementation steps. Moreover, the various applications of those algorithms in various fields such as wireless networks, Adhoc networks, Mobile ad-hoc and vehicular ad-hoc networks, speech recognition engineering, medical applications, natural language processing, material science and remote sensing applications, etc. are classified.},
-	author = {Naskath, J. and Sivakamasundari, G. and Begum, A. Alif Siddiqua},
-	date = {2023/02/01},
-	date-added = {2023-05-02 16:26:44 -0400},
-	date-modified = {2023-05-02 16:27:15 -0400},
-	doi = {10.1007/s11277-022-10079-4},
-	id = {Naskath2023},
-	isbn = {1572-834X},
-	journal = {Wireless Personal Communications},
-	month = {10},
-	number = {4},
-	pages = {2913--2936},
-	title = {A Study on Different Deep Learning Algorithms Used in Deep Neural Nets: MLP SOM and DBN},
-	url = {https://doi.org/10.1007/s11277-022-10079-4},
-	volume = {128},
-	year = {2022},
-	bdsk-url-1 = {https://doi.org/10.1007/s11277-022-10079-4}}
- 
- @misc{kumar2022_cnn, title={Different types of CNN Architectures explained: Examples}, url={https://vitalflux.com/different-types-of-cnn-architectures-explained-examples/}, journal={Data Analytics}, publisher={VitalFlux}, author={Kumar, Ajitesh}, year={2022}, month={04}} 
 
- @misc{he2016deep,
-  doi = {10.48550/ARXIV.1512.03385},
-  url = {https://arxiv.org/abs/1512.03385},
-  author = {He,  Kaiming and Zhang,  Xiangyu and Ren,  Shaoqing and Sun,  Jian},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
-  title = {Deep Residual Learning for Image Recognition},
-  publisher = {arXiv},
-  year = {2015},
-  copyright = {arXiv.org perpetual,  non-exclusive license}
+@article{Naskath2022,
+  abstract     = {Deep learning is a wildly popular topic in machine learning and is structured as a series of nonlinear layers that learns various levels of data representations. Deep learning employs numerous layers to represent data abstractions to implement various computer models. Deep learning approaches like generative, discriminative models and model transfer have transformed information processing. This article proposes a comprehensive review of various deep learning algorithms Multi layer perception, Self-organizing map and deep belief networks algorithms. It first briefly introduces historical and recent state-of-the-art reviews with suitable architectures and implementation steps. Moreover, the various applications of those algorithms in various fields such as wireless networks, Adhoc networks, Mobile ad-hoc and vehicular ad-hoc networks, speech recognition engineering, medical applications, natural language processing, material science and remote sensing applications, etc. are classified.},
+  author       = {Naskath, J. and Sivakamasundari, G. and Begum, A. Alif Siddiqua},
+  url          = {https://doi.org/10.1007/s11277-022-10079-4},
+  date         = {2022-10},
+  doi          = {10.1007/s11277-022-10079-4},
+  isbn         = {1572-834X},
+  journaltitle = {Wireless Personal Communications},
+  number       = {4},
+  pages        = {2913--2936},
+  title        = {A Study on Different Deep Learning Algorithms Used in Deep Neural Nets: MLP SOM and DBN},
+  volume       = {128},
 }
 
-@InProceedings{Simonyan15,
-  author       = "Karen Simonyan and Andrew Zisserman",
-  title        = "Very Deep Convolutional Networks for Large-Scale Image Recognition",
-  booktitle    = "International Conference on Learning Representations",
-  year         = "2015",
+@misc{kumar2022_cnn,
+  author       = {Kumar, Ajitesh},
+  publisher    = {VitalFlux},
+  url          = {https://vitalflux.com/different-types-of-cnn-architectures-explained-examples/},
+  date         = {2022-04},
+  journaltitle = {Data Analytics},
+  title        = {Different types of CNN Architectures explained: Examples},
+}
+
+@misc{he2016deep,
+  author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  publisher = {arXiv},
+  url       = {https://arxiv.org/abs/1512.03385},
+  date      = {2015},
+  doi       = {10.48550/ARXIV.1512.03385},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences,FOS: Computer and information sciences},
+  title     = {Deep Residual Learning for Image Recognition},
+}
+
+@inproceedings{Simonyan15,
+  author    = {Simonyan, Karen and Zisserman, Andrew},
+  booktitle = {International Conference on Learning Representations},
+  date      = {2015},
+  title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
 }
 
 @misc{Kim2014,
-  doi = {10.48550/ARXIV.1408.5882},
-  url = {https://arxiv.org/abs/1408.5882},
-  author = {Kim,  Yoon},
-  keywords = {Computation and Language (cs.CL),  Neural and Evolutionary Computing (cs.NE),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
-  title = {Convolutional Neural Networks for Sentence Classification},
+  author    = {Kim, Yoon},
   publisher = {arXiv},
-  year = {2014},
-  copyright = {arXiv.org perpetual,  non-exclusive license}
+  url       = {https://arxiv.org/abs/1408.5882},
+  date      = {2014},
+  doi       = {10.48550/ARXIV.1408.5882},
+  keywords  = {Computation and Language (cs.CL),Neural and Evolutionary Computing (cs.NE),FOS: Computer and information sciences,FOS: Computer and information sciences},
+  title     = {Convolutional Neural Networks for Sentence Classification},
 }
 
-
 @article{Kiranyaz2021,
-	abstract = {During the last decade, Convolutional Neural Networks (CNNs) have become the de facto standard for various Computer Vision and Machine Learning operations. CNNs are feed-forward Artificial Neural Networks (ANNs) with alternating convolutional and subsampling layers. Deep 2D CNNs with many hidden layers and millions of parameters have the ability to learn complex objects and patterns providing that they can be trained on a massive size visual database with ground-truth labels. With a proper training, this unique ability makes them the primary tool for various engineering applications for 2D signals such as images and video frames. Yet, this may not be a viable option in numerous applications over 1D signals especially when the training data is scarce or application specific. To address this issue, 1D CNNs have recently been proposed and immediately achieved the state-of-the-art performance levels in several applications such as personalized biomedical data classification and early diagnosis, structural health monitoring, anomaly detection and identification in power electronics and electrical motor fault detection. Another major advantage is that a real-time and low-cost hardware implementation is feasible due to the simple and compact configuration of 1D CNNs that perform only 1D convolutions (scalar multiplications and additions). This paper presents a comprehensive review of the general architecture and principals of 1D CNNs along with their major engineering applications, especially focused on the recent progress in this field. Their state-of-the-art performance is highlighted concluding with their unique properties. The benchmark datasets and the principal 1D CNN software used in those applications are also publicly shared in a dedicated website. While there has not been a paper on the review of 1D CNNs and its applications in the literature, this paper fulfills this gap.},
-	author = {Serkan Kiranyaz and Onur Avci and Osama Abdeljaber and Turker Ince and Moncef Gabbouj and Daniel J. Inman},
-	doi = {https://doi.org/10.1016/j.ymssp.2020.107398},
-	issn = {0888-3270},
-	journal = {Mechanical Systems and Signal Processing},
-	keywords = {Artificial Neural Networks, Machine learning, Deep learning, Convolutional neural networks, Structural health monitoring, Condition monitoring, Arrhythmia detection and identification, Fault detection, Structural damage detection},
-	pages = {107398},
-	title = {1D convolutional neural networks and applications: A survey},
-	url = {https://www.sciencedirect.com/science/article/pii/S0888327020307846},
-	volume = {151},
-	year = {2021},
-	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0888327020307846},
-	bdsk-url-2 = {https://doi.org/10.1016/j.ymssp.2020.107398}}
+  abstract     = {During the last decade, Convolutional Neural Networks (CNNs) have become the de facto standard for various Computer Vision and Machine Learning operations. CNNs are feed-forward Artificial Neural Networks (ANNs) with alternating convolutional and subsampling layers. Deep 2D CNNs with many hidden layers and millions of parameters have the ability to learn complex objects and patterns providing that they can be trained on a massive size visual database with ground-truth labels. With a proper training, this unique ability makes them the primary tool for various engineering applications for 2D signals such as images and video frames. Yet, this may not be a viable option in numerous applications over 1D signals especially when the training data is scarce or application specific. To address this issue, 1D CNNs have recently been proposed and immediately achieved the state-of-the-art performance levels in several applications such as personalized biomedical data classification and early diagnosis, structural health monitoring, anomaly detection and identification in power electronics and electrical motor fault detection. Another major advantage is that a real-time and low-cost hardware implementation is feasible due to the simple and compact configuration of 1D CNNs that perform only 1D convolutions (scalar multiplications and additions). This paper presents a comprehensive review of the general architecture and principals of 1D CNNs along with their major engineering applications, especially focused on the recent progress in this field. Their state-of-the-art performance is highlighted concluding with their unique properties. The benchmark datasets and the principal 1D CNN software used in those applications are also publicly shared in a dedicated website. While there has not been a paper on the review of 1D CNNs and its applications in the literature, this paper fulfills this gap.},
+  author       = {Kiranyaz, Serkan and Avci, Onur and Abdeljaber, Osama and Ince, Turker and Gabbouj, Moncef and Inman, Daniel J.},
+  url          = {https://www.sciencedirect.com/science/article/pii/S0888327020307846},
+  date         = {2021},
+  doi          = {https://doi.org/10.1016/j.ymssp.2020.107398},
+  issn         = {0888-3270},
+  journaltitle = {Mechanical Systems and Signal Processing},
+  keywords     = {Artificial Neural Networks,Machine learning,Deep learning,Convolutional neural networks,Structural health monitoring,Condition monitoring,Arrhythmia detection and identification,Fault detection,Structural damage detection},
+  pages        = {107398},
+  title        = {1D convolutional neural networks and applications: A survey},
+  volume       = {151},
+}
 
 @misc{Huang2016,
-  doi = {10.48550/ARXIV.1608.06993},
-  url = {https://arxiv.org/abs/1608.06993},
-  author = {Huang,  Gao and Liu,  Zhuang and van der Maaten,  Laurens and Weinberger,  Kilian Q.},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV),  Machine Learning (cs.LG),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
-  title = {Densely Connected Convolutional Networks},
+  author    = {Huang, Gao and Liu, Zhuang and van der Maaten, Laurens and Weinberger, Kilian Q.},
   publisher = {arXiv},
-  year = {2016},
-  copyright = {arXiv.org perpetual,  non-exclusive license}
+  url       = {https://arxiv.org/abs/1608.06993},
+  date      = {2016},
+  doi       = {10.48550/ARXIV.1608.06993},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV),Machine Learning (cs.LG),FOS: Computer and information sciences,FOS: Computer and information sciences},
+  title     = {Densely Connected Convolutional Networks},
 }
 
 @misc{Shelhamer2016,
-  doi = {10.48550/ARXIV.1605.06211},
-  url = {https://arxiv.org/abs/1605.06211},
-  author = {Shelhamer,  Evan and Long,  Jonathan and Darrell,  Trevor},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
-  title = {Fully Convolutional Networks for Semantic Segmentation},
+  author    = {Shelhamer, Evan and Long, Jonathan and Darrell, Trevor},
   publisher = {arXiv},
-  year = {2016},
-  copyright = {arXiv.org perpetual,  non-exclusive license}
+  url       = {https://arxiv.org/abs/1605.06211},
+  date      = {2016},
+  doi       = {10.48550/ARXIV.1605.06211},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences,FOS: Computer and information sciences},
+  title     = {Fully Convolutional Networks for Semantic Segmentation},
 }
-
 
 @jurthesis{rubenzahl2018,
-	address = {Rochester, NY},
-	author = {Ryan Rubenzahl},
-	date-added = {2023-05-02 20:19:47 -0400},
-	date-modified = {2023-05-02 20:20:44 -0400},
-	month = {May},
-	school = {University of Rochester},
-	title = {Identifying Type Ia Supernovae in Extragalactic Spectra},
-	type = {Senior Thesis},
-	year = {2018}}
+  author      = {Rubenzahl, Ryan},
+  institution = {University of Rochester},
+  location    = {Rochester, NY},
+  date        = {2018-05},
+  title       = {Identifying Type Ia Supernovae in Extragalactic Spectra},
+  type        = {Senior Thesis},
+}
 
 @jurthesis{kitomi2019,
-address = {Rochester, NY},
-	author = {Ouail Kitomi},
-	month = {May},
-	school = {University of Rochester},
-	title = {--},
-	type = {Senior Thesis},
-	year = {2019}}
-
- @jurthesis{Wasserman2020,
-address = {Rochester, NY},
-	author = {Amanda Wasserman},
-	month = {May},
-	school = {University of Rochester},
-	title = {--},
-	type = {Senior Thesis},
-	year = {2020}}
-
-  @jurthesis{Sepeku2022,
-address = {Rochester, NY},
-	author = {Edmund Sepeku},
-	month = {May},
-	school = {University of Rochester},
-	title = {--},
-	type = {Senior Thesis},
-	year = {2022}}
-    
-@article{Pence2010,
-	author = {{Pence, W. D.} and {Chiappetti, L.} and {Page, C. G.} and {Shaw, R. A.} and {Stobie, E.}},
-	date-modified = {2023-05-02 23:58:12 -0400},
-	doi = {10.1051/0004-6361/201015362},
-	journal = {A\&A},
-	month = {11},
-	pages = {A42},
-	title = {Definition of the Flexible Image Transport System (FITS), version 3.0},
-	url = {https://doi.org/10.1051/0004-6361/201015362},
-	volume = 524,
-	year = 2010,
-	bdsk-url-1 = {https://doi.org/10.1051/0004-6361/201015362}}
-
-    @article{Guy2023,
-  doi = {10.3847/1538-3881/acb212},
-  url = {https://doi.org/10.3847/1538-3881/acb212},
-  year = {2023},
-  month = {03},
-  publisher = {American Astronomical Society},
-  volume = {165},
-  number = {4},
-  pages = {144},
-  author = {J. Guy and S. Bailey and A. Kremin and Shadab Alam and D. M. Alexander and C. Allende Prieto and S. BenZvi and A. S. Bolton and D. Brooks and E. Chaussidon and A. P. Cooper and K. Dawson and A. de la Macorra and A. Dey and Biprateep Dey and G. Dhungana and D. J. Eisenstein and A. Font-Ribera and J. E. Forero-Romero and E. Gazta{\~{n}}aga and S. Gontcho A Gontcho and D. Green and K. Honscheid and M. Ishak and R. Kehoe and D. Kirkby and T. Kisner and Sergey E. Koposov and Ting-Wen Lan and M. Landriau and L. Le Guillou and Michael E. Levi and C. Magneville and Christopher J. Manser and P. Martini and Aaron M. Meisner and R. Miquel and J. Moustakas and Adam D. Myers and Jeffrey A. Newman and Jundan Nie and N. Palanque-Delabrouille and W. J. Percival and C. Poppett and F. Prada and A. Raichoor and C. Ravoux and A. J. Ross and E. F. Schlafly and D. Schlegel and M. Schubnell and Ray M. Sharples and Gregory Tarl{\'{e}} and B. A. Weaver and Christophe Y{\'{e}}che and Rongpu Zhou and Zhimin Zhou and H. Zou},
-  title = {The Spectroscopic Data Processing Pipeline for the Dark Energy Spectroscopic Instrument},
-  journal = {The Astronomical Journal}
+  author      = {Kitomi, Ouail},
+  institution = {University of Rochester},
+  location    = {Rochester, NY},
+  date        = {2019-05},
+  title       = {--},
+  type        = {Senior Thesis},
 }
+
+@jurthesis{Wasserman2020,
+  author      = {Wasserman, Amanda},
+  institution = {University of Rochester},
+  location    = {Rochester, NY},
+  date        = {2020-05},
+  title       = {--},
+  type        = {Senior Thesis},
+}
+
+@jurthesis{Sepeku2022,
+  author      = {Sepeku, Edmund},
+  institution = {University of Rochester},
+  location    = {Rochester, NY},
+  date        = {2022-05},
+  title       = {--},
+  type        = {Senior Thesis},
+}
+
+@article{Pence2010,
+  author       = {{Pence, W. D.} and {Chiappetti, L.} and {Page, C. G.} and {Shaw, R. A.} and {Stobie, E.}},
+  url          = {https://doi.org/10.1051/0004-6361/201015362},
+  date         = {2010-11},
+  doi          = {10.1051/0004-6361/201015362},
+  journaltitle = {A\&A},
+  pages        = {A42},
+  title        = {Definition of the Flexible Image Transport System (FITS), version 3.0},
+  volume       = {524},
+}
+
+@article{Guy2023,
+  author       = {Guy, J. and Bailey, S. and Kremin, A. and Alam, Shadab and Alexander, D. M. and Prieto, C. Allende and BenZvi, S. and Bolton, A. S. and Brooks, D. and Chaussidon, E. and Cooper, A. P. and Dawson, K. and de la Macorra, A. and Dey, A. and Dey, Biprateep and Dhungana, G. and Eisenstein, D. J. and Font-Ribera, A. and Forero-Romero, J. E. and Gaztañaga, E. and Gontcho, S. Gontcho A and Green, D. and Honscheid, K. and Ishak, M. and Kehoe, R. and Kirkby, D. and Kisner, T. and Koposov, Sergey E. and Lan, Ting-Wen and Landriau, M. and Guillou, L. Le and Levi, Michael E. and Magneville, C. and Manser, Christopher J. and Martini, P. and Meisner, Aaron M. and Miquel, R. and Moustakas, J. and Myers, Adam D. and Newman, Jeffrey A. and Nie, Jundan and Palanque-Delabrouille, N. and Percival, W. J. and Poppett, C. and Prada, F. and Raichoor, A. and Ravoux, C. and Ross, A. J. and Schlafly, E. F. and Schlegel, D. and Schubnell, M. and Sharples, Ray M. and Tarlé, Gregory and Weaver, B. A. and Yéche, Christophe and Zhou, Rongpu and Zhou, Zhimin and Zou, H.},
+  publisher    = {American Astronomical Society},
+  url          = {https://doi.org/10.3847/1538-3881/acb212},
+  date         = {2023-03},
+  doi          = {10.3847/1538-3881/acb212},
+  journaltitle = {The Astronomical Journal},
+  number       = {4},
+  pages        = {144},
+  title        = {The Spectroscopic Data Processing Pipeline for the Dark Energy Spectroscopic Instrument},
+  volume       = {165},
+}
+
+@article{Zwicky1938,
+  author       = {{Zwicky}, F.},
+  date         = {1938-12},
+  doi          = {10.1086/144007},
+  journaltitle = {\apj},
+  pages        = {529},
+  title        = {{On the Frequency of Supernovae.}},
+  volume       = {88},
+}
+
+@inproceedings{Koenig2005,
+  author    = {{Koenig}, T.},
+  editor    = {{Turatto}, M. and {Benetti}, S. and {Zampieri}, L. and {Shea}, W.},
+  booktitle = {1604-2004: Supernovae as Cosmological Lighthouses},
+  date      = {2005-12},
+  pages     = {53},
+  series    = {Astronomical Society of the Pacific Conference Series},
+  title     = {{Fritz Zwicky: Novae Become Supernovae}},
+  volume    = {342},
+}
+
+@article{Schaefer1995,
+  author       = {{Schaefer}, Bradley E.},
+  date         = {1995-07},
+  doi          = {10.1086/309549},
+  journaltitle = {\apjl},
+  keywords     = {COSMOLOGY: OBSERVATIONS,COSMOLOGY: DISTANCE SCALE,GALAXIES: INDIVIDUAL NGC NUMBER: NGC 5253,STARS: SUPERNOVAE: INDIVIDUAL ALPHANUMERIC: SN 1895B},
+  pages        = {L13},
+  title        = {{The Peak Brightness of SN 1895B in NGC 5253 and the Hubble Constant}},
+  volume       = {447},
+}
+
+@article{deVaucouleurs1985,
+  author       = {{de Vaucouleurs}, G. and {Corwin}, H. G., Jr.},
+  date         = {1985-08},
+  doi          = {10.1086/163374},
+  journaltitle = {\apj},
+  keywords     = {Andromeda Galaxy,Light Curve,Supernovae,Reference Stars,Stellar Color,Stellar Magnitude,Stellar Spectra,Supernova Remnants,Wavelengths,Astrophysics},
+  pages        = {287},
+  title        = {{S Andromedae 1885: A Centennial Review}},
+  volume       = {295},
+}
+
+@article{Baade1934,
+  author       = {Baade, W. and Zwicky, F.},
+  publisher    = {National Academy of Sciences},
+  url          = {http://www.jstor.org/stable/86841},
+  date         = {1934},
+  issn         = {00278424},
+  journaltitle = {Proceedings of the National Academy of Sciences of the United States of America},
+  number       = {5},
+  pages        = {259--263},
+  title        = {Cosmic Rays from Super-novae},
+  urldate      = {2023-05-03},
+  volume       = {20},
+}
+
+@article{Barbon1999,
+  author       = {{Barbon}, R. and {Buondı́}, V. and {Cappellaro}, E. and {Turatto}, M.},
+  date         = {1999-11},
+  doi          = {10.1051/aas:1999404},
+  eprint       = {astro-ph/9908046},
+  eprintclass  = {astro-ph},
+  eprinttype   = {arXiv},
+  journaltitle = {\aaps},
+  keywords     = {SUPERNOVAE AND SUPERNOVA REMNANTS: GENERAL,SURVEYS,GALAXIES: GENERAL,GALAXIES: STELLAR CONTENTS OF,Astrophysics},
+  pages        = {531--536},
+  title        = {{The Asiago Supernova Catalogue - 10 years after}},
+  volume       = {139},
+}
+
+@article{Minkowski1941,
+  author       = {{Minkowski}, R.},
+  date         = {1941-08},
+  doi          = {10.1086/125315},
+  journaltitle = {\pasp},
+  number       = {314},
+  pages        = {224},
+  title        = {{Spectra of Supernovae}},
+  volume       = {53},
+}
+
+@incollection{Turatto2003,
+  author    = {{Turatto}, M.},
+  editor    = {{Weiler}, K.},
+  booktitle = {Supernovae and Gamma-Ray Bursters},
+  date      = {2003},
+  doi       = {10.1007/3-540-45863-8_3},
+  keywords  = {Astrophysics},
+  pages     = {21--36},
+  title     = {{Classification of Supernovae}},
+  volume    = {598},
+}
+
+@article{Filippenko1997,
+  author       = {{Filippenko}, Alexei V.},
+  date         = {1997-01},
+  doi          = {10.1146/annurev.astro.35.1.309},
+  journaltitle = {\araa},
+  pages        = {309--355},
+  title        = {{Optical Spectra of Supernovae}},
+  volume       = {35},
+}
+
+@article{Perlmutter1999,
+  author       = {{Perlmutter}, S. and {Pennypacker}, C. R. and {Goldhaber}, G. and {Goobar}, A. and {Muller}, R. A. and {Newberg}, H. J. M. and {Desai}, J. and {Kim}, A. G. and {Kim}, M. Y. and {Small}, I. A. and {Boyle}, B. J. and {Crawford}, C. S. and {McMahon}, R. G. and {Bunclark}, P. S. and {Carter}, D. and {Irwin}, M. J. and {Terlevich}, R. J. and {Ellis}, R. S. and {Glazebrook}, K. and {Couch}, W. J. and {Mould}, J. R. and {Small}, T. A. and {Abraham}, R. G.},
+  date         = {1995-02},
+  doi          = {10.1086/187756},
+  eprint       = {astro-ph/9505023},
+  eprintclass  = {astro-ph},
+  eprinttype   = {arXiv},
+  journaltitle = {\apjl},
+  keywords     = {Cosmology,Deceleration,Error Analysis,Red Shift,Supernovae,Charge Coupled Devices,Dark Matter,Light Curve,Stellar Spectrophotometry,Astrophysics,Astrophysics},
+  pages        = {L41},
+  title        = {{A Supernova at Z = 0.458 and Implications for Measuring the Cosmological Deceleration}},
+  volume       = {440},
+}
+
+@article{Mikolov2013,
+  author       = {{Mikolov}, Tomas and {Chen}, Kai and {Corrado}, Greg and {Dean}, Jeffrey},
+  date         = {2013-01},
+  doi          = {10.48550/arXiv.1301.3781},
+  eid          = {arXiv:1301.3781},
+  eprint       = {1301.3781},
+  eprintclass  = {cs.CL},
+  eprinttype   = {arXiv},
+  journaltitle = {arXiv e-prints},
+  keywords     = {Computer Science - Computation and Language},
+  pages        = {arXiv:1301.3781},
+  title        = {{Efficient Estimation of Word Representations in Vector Space}},
+}
+
+@article{Nassif2019,
+  author       = {Nassif, Ali Bou and Shahin, Ismail and Attili, Imtinan and Azzeh, Mohammad and Shaalan, Khaled},
+  date         = {2019},
+  doi          = {10.1109/ACCESS.2019.2896880},
+  journaltitle = {IEEE Access},
+  pages        = {19143--19165},
+  title        = {Speech Recognition Using Deep Neural Networks: A Systematic Review},
+  volume       = {7},
+}
+
+@article{Becker2021,
+  author       = {{Becker}, Burger and {Vaccari}, Mattia and {Prescott}, Matthew and {Grobler}, Trienko},
+  date         = {2021-05},
+  doi          = {10.1093/mnras/stab325},
+  eprint       = {2102.03780},
+  eprintclass  = {astro-ph.GA},
+  eprinttype   = {arXiv},
+  journaltitle = {\mnras},
+  keywords     = {methods: statistical,techniques: image processing,surveys,radio continuum: galaxies,Astrophysics - Astrophysics of Galaxies},
+  number       = {2},
+  pages        = {1828--1846},
+  title        = {{CNN architecture comparison for radio galaxy classification}},
+  volume       = {503},
+}
+
+@article{Gauci2010,
+  author       = {{Gauci}, Adam and {Zarb Adami}, Kristian and {Abela}, John},
+  date         = {2010-05},
+  doi          = {10.48550/arXiv.1005.0390},
+  eid          = {arXiv:1005.0390},
+  eprint       = {1005.0390},
+  eprintclass  = {astro-ph.GA},
+  eprinttype   = {arXiv},
+  journaltitle = {arXiv e-prints},
+  keywords     = {Astrophysics - Galaxy Astrophysics,Computer Science - Machine Learning},
+  pages        = {arXiv:1005.0390},
+  title        = {{Machine Learning for Galaxy Morphology Classification}},
+}
+
+@article{Mller2016,
+  author       = {Möller, A. and Ruhlmann-Kleider, V. and Leloup, C. and Neveu, J. and Palanque-Delabrouille, N. and Rich, J. and Carlberg, R. and Lidman, C. and Pritchet, C.},
+  publisher    = {{IOP} Publishing},
+  url          = {https://doi.org/10.1088/1475-7516/2016/12/008},
+  date         = {2016-12},
+  doi          = {10.1088/1475-7516/2016/12/008},
+  journaltitle = {Journal of Cosmology and Astroparticle Physics},
+  number       = {12},
+  pages        = {008--008},
+  title        = {Photometric classification of type Ia supernovae in the {SuperNova} Legacy Survey with supervised learning},
+  volume       = {2016},
+}
+
