Segev edits to Chapter 1 and 2

--- a/references.bib
+++ b/references.bib
@@ -38,7 +38,7 @@
 }
 
 @inproceedings{lecun2004,
-  author    = {LeCun, Y. and Huang, Fu Jie and Bottou, L.},
+  author    = {LeCun, Y. and Huang, F. and Bottou, L.},
   booktitle = {Proceedings of the 2004 IEEE Computer Society Conference on Computer Vision and Pattern Recognition, 2004. CVPR 2004.},
   date      = {2004},
   doi       = {10.1109/CVPR.2004.1315150},
