Re-naming some figures, work on Results, Title Name now Included

--- a/references.bib
+++ b/references.bib
@@ -194,40 +194,40 @@
   title     = {Fully Convolutional Networks for Semantic Segmentation},
 }
 
-@jurthesis{rubenzahl2018,
+@thesis{rubenzahl2018,
   author      = {Rubenzahl, Ryan},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2018-05},
   title       = {Identifying Type Ia Supernovae in Extragalactic Spectra},
-  type        = {Senior Thesis},
+  type        = {Bachelor's Thesis},
 }
 
-@jurthesis{kitomi2019,
+@thesis{kitomi2019,
   author      = {Kitomi, Ouail},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2019-05},
   title       = {--},
-  type        = {Senior Thesis},
+  type        = {Bachelor's Thesis},
 }
 
-@jurthesis{Wasserman2020,
+@thesis{Wasserman2020,
   author      = {Wasserman, Amanda},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2020-05},
   title       = {--},
-  type        = {Senior Thesis},
+  type        = {Bachelor's Thesis},
 }
 
-@jurthesis{Sepeku2022,
+@thesis{Sepeku2022,
   author      = {Sepeku, Edmund},
   institution = {University of Rochester},
   location    = {Rochester, NY},
   date        = {2022-05},
   title       = {--},
-  type        = {Senior Thesis},
+  type        = {Bachelor's Thesis},
 }
 
 @article{Pence2010,
