--- a/structure/title.tex
+++ b/structure/title.tex
@@ -2,7 +2,7 @@
   \vspace*{\fill}
 
   \begin{center}
-    {\Huge This Is My Title\\ Along With More Clarification\par
+    {\Huge Adoption of the Transformer Architecture \\for Transient Detection in the DESI Survey\par
     }
 
     \bigskip%
@@ -25,7 +25,7 @@
     %%%%%
 
     \bigskip\bigskip\bigskip\bigskip%
-    Supervised by Segev BenZvi, Ph.D.
+    Supervised by Professor Segev BenZvi
 
     \bigskip\bigskip%
     Department of Physics and Astronomy\\
