--- a/structure/tablesfigures.tex
+++ b/structure/tablesfigures.tex
@@ -1,13 +1,16 @@
 % LIST OF TABLES & FIGURES
 
 % List of tables, if applicable
-\listoftables
-\iftoggle{fulltoc}{
-  \addcontentsline{toc}{chapter}{List of Tables}
-}{}
+{
+    \singlespacing
+    \listoftables
+    \iftoggle{fulltoc}{
+      \addcontentsline{toc}{chapter}{List of Tables}
+    }{}
 
-% List of figures, if applicable
-\listoffigures
-\iftoggle{fulltoc}{
-  \addcontentsline{toc}{chapter}{List of Figures}
-}{}
+    % List of figures, if applicable
+    \listoffigures
+    \iftoggle{fulltoc}{
+      \addcontentsline{toc}{chapter}{List of Figures}
+    }{}
+}
