Transformer Images, Fixed backhalf of Ch2

--- a/references.bib
+++ b/references.bib
@@ -212,12 +212,12 @@
   type        = {Bachelor's Thesis},
 }
 
-@thesis{Wasserman2020,
+@thesis{wasserman2021,
   author      = {Wasserman, Amanda},
   institution = {University of Rochester},
   location    = {Rochester, NY},
-  date        = {2020-05},
-  title       = {--},
+  date        = {2021-05},
+  title       = {Using Machine Learning to Identify Transients in the DESI Survey},
   type        = {Bachelor's Thesis},
 }
 
